--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
             <div id="8" class="square"></div>
         </div>
     </div>
+    <div class="menu"> 
+        <nav>
+        <input class="player" id="player1" type="text" placeholder="Jogador-1">
+        <input class="player" id="player2" type="text" placeholder="Jogador-2">
+        <input id="play" type="button" value="Jogar">
+        </nav>
+    </div>
+    <section>
+        <div id="player-win"></div>
+    </section>
     <script src="game.js"></script>
     <script src="interface.js"></script>
 </body>
