--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo da Velha</title>
-    <link rel="stylesheet" type="text/css" href="style.css"
+    <link rel="stylesheet" type="text/css" href="/Style/style.css"
 </head>
 <body>
-    <h1>Jogo da Velha #</h1>
+    <img id="logo" src="img/jodo-da-velha.png">
     <div class="board">
         <div>
             <div id="0" class="square">
@@ -39,8 +39,14 @@
     </div>
     <section>
         <div id="player-win"></div>
+        <div>
+            <div id="placar"></div>
+        </div>
+        
+        <input id="restart" onclick="restart()" type="button" value="Jogar Novamente">
     </section>
-    <script src="game.js"></script>
-    <script src="interface.js"></script>
+
+    <script src="/Script/game.js"></script>
+    <script src="/Script/interface.js"></script>
 </body>
 </html>
